fix: z-indexes

--- a/themes/dot/assets/css/style.css
+++ b/themes/dot/assets/css/style.css
@@ -1105,7 +1105,7 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  z-index: -1;
+  /* z-index: -1; */
 
 }
 
